Api call now logs the user in. Authenticates the user through ng-model. Returns the users details back to the web page.

--- a/app/html/lobby.html
+++ b/app/html/lobby.html
@@ -7,8 +7,15 @@
     <title>Bingo</title>
 </head>
 <body>
-<img src="../images/pageBanner.png">
-<h1> THIS IS THE LOBBY</h1>
+<h1> Welcome! Lets play some bingo</h1>
+<div class="playerInformation">
+    <div>Username: {{gameApi.username}}</div>
+    <div>Balance:{{gameApi.balance | currency}}</div>
+</div>
+<input type="button" value="Log Out" ng-click="gameApi.logOut">
+<br>
+<a ng-hide="hideMe" ui-sref="home" href="#" ng-click="hideMe=true">Home</a>
+
 </body>
 <script src="../scripts/app.js"></script>
 </html>
