--- a/app/html/logIn.html
+++ b/app/html/logIn.html
@@ -7,19 +7,18 @@
     <title>Bingo</title>
 </head>
 <body>
-    <img src="../images/pageBanner.png">
     <div class="login">
         <h1>Login to Bingo</h1>
-        <form method="post" action="logIn.html">
-            <p><input type="text" name="username" value="" placeholder="Username or Email"></p>
-            <p><input type="password" name="password" value="" placeholder="Password"></p>
+        <form>
+            <p><input type="text" ng-model="{{apiCalls.username}}" name="username" value="" placeholder="Username or Email"></p>
+            <p><input type="password" ng-model="{{apiCalls.password}}" name="password" value="" placeholder="Password"></p>
             <p class="remember_me">
                 <label>
                     <input type="checkbox" name="remember_me" id="remember_me">
                     Remember me on this computer
                 </label>
             </p>
-            <p class="submit"><input type="submit" name="commit" value="Login" onsubmit="gameApi.logIn()"></p>
+            <input type="button" value="Submit" ng-click="gameApi.logIn()">
         </form>
     </div>
 </body>
