log in and log out functionality works fine.

--- a/app/html/lobby.html
+++ b/app/html/lobby.html
@@ -12,7 +12,7 @@
     <div>Username: {{gameApi.username}}</div>
     <div>Balance:{{gameApi.balance | currency}}</div>
 </div>
-<input type="button" value="Log Out" ng-click="gameApi.logOut">
+<input type="button" value="Log Out" ng-click="authenticateUser.logOut()">
 <br>
 <a ng-hide="hideMe" ui-sref="home" href="#" ng-click="hideMe=true">Home</a>
 
