--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 <body>
     <img src="../images/pageBanner.png">
     <div ui-view></div>
-    <a ng-hide="showme" ui-sref="logIn" href="#" ng-click="showme=true">Log In</a>
+    <a ui-sref="logIn" href="#">Log In</a>
 </body>
 <script src="../scripts/app.js"></script>
 </html>
