--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="Tombola.Module.Main" ng-controller="ApiController">
+<html lang="en" ng-app="Tombola.Module.Main">
 <head>
     <script type="text/javascript" src="thirdparty/bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="thirdparty/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -9,8 +9,9 @@
 </head>
 <body>
     <img src="../images/pageBanner.png">
-    <div ui-view></div>
-    <a ui-sref="logIn" href="#">Log In</a>
+    <div ui-view>
+
+    </div>
 </body>
 <script src="../scripts/app.js"></script>
 </html>
