--- a/app/html/logIn.html
+++ b/app/html/logIn.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" ng-app="Tombola.Module.ApiCall" ng-controller="ApiController">
-<head>
-    <script type="text/javascript" src="../thirdparty/bower_components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="../thirdparty/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <meta charset="UTF-8">
-    <title>Bingo</title>
-</head>
-<body>
-    <div class="login">
+ <div class="login" ng-controller="ApiController">
         <h1>Login to Bingo</h1>
         <form>
             <p><input type="text" ng-model="{{gameApi.username}}" name="username" value="" placeholder="Username or Email"></p>
@@ -21,6 +12,3 @@
             <input type="button" value="Submit" ng-click="authenticateUser.logIn()">
         </form>
     </div>
-</body>
-<script src="../scripts/app.js"></script>
-</html>
