--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="thirdparty/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/animation.css" type="text/css">
     <title>Bingo</title>
 </head>
 <body>
